--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-    {% include nagitation.md %}
+    {% include nagitation.html %}
     {{ content }}
   </body>
 </html>
