--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,29 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-  </head>
-  <body>
-    {% include navigation.html %}
-    .topnav {
+    <style>
+      .topnav {
     background-color: #333;
     overflow: hidden;
     }
     .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+      float: left;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
     }
     .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+      background-color: #ddd;
+      color: black;
     }
     .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
+      background-color: #4CAF50;
+      color: white;
     }
+    </style>
+  </head>
+  <body>
+    {% include navigation.html %}
     {{ content }}
   </body>
 </html>
