--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,13 @@
         </nav>
 			</div>
   </header>
+  <div class="content">
     {{ content }}
+  </div>
+    <footer>
+      <div class="container">
+        <p class="center-text"> <a href="http://cloudcannon.com">Created by CloudCannon</a></p>
+      </div>
+    </footer>
   </body>
 </html>
