--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
   </div>
     <footer>
       <div class="container">
-        <p class="center-text"> <a href="http://cloudcannon.com">Created by CloudCannon</a></p>
+        <p class="center-text"> <a href="http://cloudcannon.com">Copyright of Collin Brown, 2019</a></p>
       </div>
     </footer>
   </body>
