--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,26 +5,9 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
-  <body>
-    <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <div class="container">
-				<nav class="main-nav">
-					<ul>
-						{% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
-						{% for p in navigation_pages %}
-							{% if p.navigation_weight %}
-								<li>
-									<a href="{{ p.url }}" {% if p.url == page.url %}class="active"{% endif %}>
-										{{ p.title }}
-									</a>
-								</li>
-							{% endif %}
-						{% endfor %}
-					</ul>
-        </nav>
-			</div>
-  </header>
+  <div class="h1">
+    {% include navigation.html %}
+  </div>
   <div class="content">
     {{ content }}
   </div>
