--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,5 @@
 <nav>
   <a href="/index.html">Home</a>
   <a href="/about.html">About</a>
+  <a href="/MagicMansion.html">Magic Mansion</a>
 </nav>
