--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,14 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
-  {% include navigation.html %}
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
   <div class="content">
     {{ content }}
   </div>
