--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,4 @@
-<nav>
-  {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if item.link == page.url %}class="active"{% endif %}>
-      {{ item.name }}
-    </a>
-  {% endfor %}
-</nav>
+<p style="text-align: center; background-color: white;">
+  <a href="{{site.baseurl}}/">Home</a>
+  <a href="{{site.baseurl}}/about/">About</a>
+</p>
