--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,7 @@
-<p style="text-align: center; background-color: white;">
-  <a href="{{site.baseurl}}/">Home</a>
+<div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="{{site.baseurl}}/">Home</a>
   <a href="{{site.baseurl}}/about/">About</a>
-</p>
+  </div>
+</div>
