--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,6 @@
   <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
     <a href="{{site.baseurl}}/">Home</a>
-  <a href="{{site.baseurl}}/about/">About</a>
+  <a href="{{site.baseurl}}/about.html/">About</a>
   </div>
 </div>
