--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
-  {%- include navigation.html -%}
+  {% include navigation.html %}
   <div class="content">
     {{ content }}
   </div>
